; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/iscontrol/extr_pdu.c_xmitpdu.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/iscontrol/extr_pdu.c_xmitpdu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@ISCSISEND = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"xmitpdu\00", align 1
@vflag = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [3 x i8] c"I-\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xmitpdu(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @ISCSISEND, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = call i64 @ioctl(i32 %8, i32 %9, i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = call i32 @perror(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %3, align 4
  br label %22

15:                                               ; preds = %2
  %16 = load i64, i64* @vflag, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %15
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @pukeText(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32* %19)
  br label %21

21:                                               ; preds = %18, %15
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %21, %13
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i64 @ioctl(i32, i32, i32*) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @pukeText(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
